tests/codegen/compile/runtime/fail/invalid_theory_attr.stderr
error: Second theory attribute is supplied.
  --> $DIR/invalid_theory_attr.rs:10:1
   |
10 | #[theory]
   | ^^^^^^^^^
   |
help: Consider adding the argument kind = "theory" to:
  --> $DIR/invalid_theory_attr.rs:9:1
   |
9  | #[runtime::test(executor = "async_std")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
